--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "angular2-hmr": "~0.2.2",
     "awesome-typescript-loader": "~0.16.2",
+    "axe-core": "^1.1.1",
     "compression-webpack-plugin": "^0.3.0",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
